--- a/decidim-core/app/cells/decidim/user_activity/show.erb
+++ b/decidim-core/app/cells/decidim/user_activity/show.erb
@@ -1,5 +1,15 @@
 <div class="profile__activity">
-    <%= redesigned_filter_form_for context[:filter], url_for, class: "new_filter profile__activity__filter-container" do |form| %>
+  <div class="filter-container">
+    <button id="dropdown-trigger" data-component="dropdown" data-target="dropdown-menu" data-auto-close="true">
+      <% filter_items.each_with_index do |filter, i| %>
+        <span class="<%= "is-active" if (params.dig(:filter, :resource_type) || all_types_key) == filter[:name] %>">
+          <%= resource_type_icon(filter[:name]) %><%= filter[:translation] %>
+        </span>
+      <% end %>
+      <%= icon "arrow-down-s-line" %>
+      <%= icon "arrow-up-s-line" %>
+    </button>
+    <%= redesigned_filter_form_for context[:filter], url_for, class: "new_filter", id: "dropdown-menu" do |form| %>
       <%= form.collection_radio_buttons(
             :resource_type,
             filter_items_for_radiobuttons,
@@ -7,17 +17,18 @@
             :text,
             { checked: all_types_key }
           ) do |builder|
-              builder.label { builder.radio_button(class: "reset-defaults", hidden: true) + content_tag(:div, builder.text, class: "profile__activity__filter") }
+              builder.label { builder.radio_button(class: "reset-defaults", hidden: true) + content_tag(:div, builder.text, class: "filter") }
         end %>
     <% end %>
-    <div class="profile__activity__container" id="activities-container">
-      <% if activities.length == 0 %>
-        <%= cell "decidim/announcement", t("decidim.user_activity.index.no_activities_warning") %>
-      <% else %>
-        <%= cell "decidim/activities", activities %>
-      <% end %>
-    </div>
   </div>
+  <div class="profile__activity__container" id="activities-container">
+    <% if activities.length == 0 %>
+      <%= cell "decidim/announcement", t("decidim.user_activity.index.no_activities_warning") %>
+    <% else %>
+      <%= cell "decidim/activities", activities %>
+    <% end %>
+  </div>
+</div>
 
 <div id="decidim-paginate-container">
   <%= decidim_paginate activities %>
