--- a/decidim-accountability/app/views/decidim/accountability/results/_linked_results.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/_linked_results.html.erb
@@ -1,12 +1,9 @@
-<div class="card card--action card--list">
+<div class="item-list">
   <% resources.each do |result| %>
-    <div class="card--list__item">
-      <%= icon "actions", class: "card--list__icon", role: "img", "aria-hidden": true, remove_icon_class: true %>
-      <%= link_to resource_locator(result).path, class: "card--list__text card__link card__link--block" do %>
-        <h5 class="card--list__heading">
-          <%= translated_attribute(result.title) %>
-        </h5>
-      <% end %>
-    </div>
+    <%= link_to resource_locator(result).path, class: "item-list__content" do %>
+      <h5 class="h4 item-list__title">
+        <%= translated_attribute(result.title) %>
+      </h5>
+    <% end %>
   <% end %>
 </div>
