--- a/decidim-accountability/app/views/decidim/accountability/results/home.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/home.html.erb
@@ -1,11 +1,31 @@
-<div class="row accountability">
-  <div class="small-12 columns">
-    <%= render partial: "home_header" %>
-    <%= render partial: "scope_filters", locals: { url_method: :root_path } %>
-    <%= render partial: "home_categories" %>
-  </div>
-</div>
-
 <% content_for :js_content do %>
   <%= javascript_pack_tag "decidim_accountability" %>
+<% end %>
+
+<% content_for :css_content do %>
+  <%= stylesheet_pack_tag "decidim_accountability", media: "all" %>
+<% end %>
+
+<% content_for :aside do %>
+  <h1 class="h3 md:h1 decorator"><%= component_name %></h1>
+
+  <% if component_settings.display_progress_enabled? %>
+    <%= cell(
+          "decidim/accountability/status",
+          nil,
+          title: t("decidim.accountability.results.home_header.global_status"),
+          progress: progress_calculator(current_scope, nil).presence,
+          extra_classes: "accountability__status__home"
+        ) %>
+  <% end %>
+
+  <%= render partial: "scope_filters" %>
+<% end %>
+
+<%= render layout: "layouts/decidim/shared/layout_two_col" do %>
+
+  <div class="editor-content mt-4"><%== translated_attribute component_settings.intro %></div>
+
+  <%= render partial: "home_categories" %>
+
 <% end %>
