--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_dropdown.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_dropdown.scss
@@ -1,3 +1,39 @@
+[id*="dropdown-menu"]{
+  @apply flex flex-col py-3.5 md:py-0 mx-3.5 md:mx-0 border-t md:border-t-0 border-gray-3 cursor-pointer;
+
+  &[aria-hidden="true"]{
+    @apply hidden md:flex;
+  }
+}
+
+[data-target*="dropdown"]{
+  @apply w-full md:hidden flex items-center justify-between gap-2 p-2 first-of-type:[&>svg]:block last-of-type:[&>svg]:hidden;
+
+  & > span{
+    @apply hidden font-semibold text-secondary;
+
+    &:only-of-type,
+    &.is-active{
+      @apply flex items-center gap-2 [&_svg]:fill-current;
+    }
+  }
+
+  > svg{
+    @apply w-8 h-8 flex-none text-secondary fill-current;
+  }
+
+  &[aria-expanded="false"] > svg:last-of-type,
+  &[aria-expanded="true"] > svg:first-of-type{
+    @apply hidden;
+  }
+
+  &[aria-expanded="true"] > svg:last-of-type,
+  &[aria-expanded="false"] > svg:first-of-type{
+    @apply block;
+  }
+}
+
+/* REDESIGN_PENDING: this .dropdown class will be very likely deprecated */
 .dropdown{
   @apply absolute bg-white border-2 border-gray-3 rounded min-w-max drop-shadow-md text-left;
 
