--- a/decidim-proposals/app/views/decidim/proposals/proposals/_linked_proposals.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/proposals/_linked_proposals.html.erb
@@ -26,7 +26,7 @@
         <div class="card--list__data">
           <span class="card--list__data__number">
             <%= proposal.votes.size %>
-          </span> <%= t(".proposal_votes", count: proposal.votes.size) %>
+          </span> <%= t("proposal_votes", scope: "decidim.proposals.proposals.linked_proposals", count: proposal.votes.size) %>
         </div>
       <% end %>
     </div>
