--- a/decidim-proposals/app/views/decidim/proposals/proposals/_proposal_similar.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/proposals/_proposal_similar.html.erb
@@ -10,7 +10,7 @@
         <div class="tech-info tech-info--text-left">
           <%= t("decidim.proposals.proposals.proposal.creation_date", date: l(proposal.created_at, format: :decidim_short)) %>
         </div>
-        <%= resource_reference(proposal, class: "tech-info--text-left") %>
+        <%= resource_reference(proposal) %>
       </div>
 
       <%== cell("decidim/proposals/proposal_m", proposal).badge %>
