Fix usages of sanitize helper methods for editable content provided by admins (#10007)
* Fix usages of sanitize helper methods for editable content provided by admins.

Related issue: https://github.com/decidim/decidim/issues/9927

Fixes usages of sanitize for `description` of `ParticipatoryProcess` and `ParticipatoryProcessGroup`.

* Fix usages of sanitize for `description` of assembly, conference and voting. Unify spec test.

* Fix usages of sanitize for `short_description` of conference.

--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -38,7 +38,7 @@ edit_link(
         <div class="lead">
           <%= decidim_sanitize_editor translated_attribute(current_participatory_space.short_description) %>
         </div>
-        <%= decidim_sanitize_editor translated_attribute(current_participatory_space.description) %>
+        <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.description) %>
 
         <% if current_participatory_space.private_space? %>
           <%= assembly_features(current_participatory_space) %>
