--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -98,6 +98,41 @@
 <div class="row column">
   <div class="row">
     <div class="columns medium-7 mediumlarge-8">
+      <div class="section">
+        <h2 class="show-for-sr"><%= t(".title") %></h2>
+        <% if participatory_process_group.present? %>
+          <%= render partial: "participatory_process_group" %>
+        <% end %>
+        <div class="lead">
+          <%= decidim_sanitize_editor translated_attribute(current_participatory_space.short_description) %>
+        </div>
+        <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.description) %>
+      </div>
+      <%= attachments_for current_participatory_space %>
+      <%= render_hook(:participatory_space_highlighted_elements) %>
+
+      <% if related_processes.any? %>
+        <div class="section row collapse related_processes">
+          <h4 class="section-heading"><%= t "related_processes", scope: "decidim.participatory_processes.show" %></h4>
+          <div class="collapsible-list row small-up-1 medium-up-2 card-grid">
+            <% related_processes.each do |related_process| %>
+              <%= card_for(related_process) %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+      <% if linked_assemblies.any? %>
+        <div class="section">
+          <h4 class="section-heading"><%= t("participatory_process.show.related_assemblies", scope: "decidim") %></h4>
+          <div class="row small-up-1 medium-up-2 card-grid">
+            <% linked_assemblies.each do |linked_assembly| %>
+              <%= card_for(linked_assembly) %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
     </div>
     <div class="section columns medium-5 mediumlarge-4 large-3">
       <div class="card extra">
