Change helper path for the correct for v0.26
Suggested by code review

Co-authored-by: Antti Hukkanen <antti.hukkanen@mainiotech.fi>

--- a/decidim-proposals/app/views/decidim/proposals/admin/proposals/_proposal-tr.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/admin/proposals/_proposal-tr.html.erb
@@ -8,7 +8,7 @@
   <td>
     <%= link_to(
       present(proposal).title(html_escape: true),
-      edit_proposal_path(proposal)
+      proposal_path(proposal)
     ) %><br>
   </td>
   <td>
