Avoid blank elements in verifications of authorization modal

--- a/decidim-core/app/views/decidim/authorization_modals/_redesigned_content.html.erb
+++ b/decidim-core/app/views/decidim/authorization_modals/_redesigned_content.html.erb
@@ -17,7 +17,7 @@
 
                       [status_messages(status), status_cta(status), status_fields(status)]
                     end
-                  end
+                  end.compact_blank
 %>
 <div data-dialog-container>
   <%= icon "lock-line" %>
