--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -18,10 +18,14 @@
   }
 
   [data-dialog-container]{
-    @apply flex items-start gap-2 last:[&>*]:grow last:[&>*]:pr-6;
+    @apply grid grid-cols-[auto_1fr] items-center gap-2;
 
     > svg{
       @apply w-6 h-6 text-gray fill-current flex-none;
+    }
+
+    > :last-child{
+      @apply col-span-2 md:col-span-1 md:col-start-2
     }
   }
 
