--- a/decidim-core/app/cells/decidim/version/show.erb
+++ b/decidim-core/app/cells/decidim/version/show.erb
@@ -3,7 +3,9 @@
   <%= render_resource_editor(current_version) %>
 </div>
 
+<turbo-frame id="version_diff_frame">
   <%= cell("decidim/diff", current_version, path:) %>
+</turbo-frame>
 
 <%= link_to resource_path, class: "button button__sm button__text-secondary" do %>
   <%= icon "arrow-left-line", class: "fill-current" %>
