add styles to projects

--- a/decidim-budgets/app/cells/decidim/budgets/project_list_item/project_text.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_list_item/project_text.erb
@@ -8,7 +8,7 @@
       </h3>
     <% end %>
 
-    <div class="show-for-medium">
+    <div class="item-list__metadata">
       <%= cell "decidim/budgets/project_tags", model, context: { extra_classes: ["tags--project"] } %>
     </div>
 
