--- a/decidim-budgets/app/cells/decidim/budgets/project_list_item/project_text.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_list_item/project_text.erb
@@ -1,23 +1,20 @@
-<div class="budget-list__text card__text">
-  <div>
-    <%= link_to resource_path, class: "card__link" do %>
-      <h3 class="item-list__title">
-        <%= cell("decidim/budgets/project_selected_status", model) %>
+<div class="item-list__text">
+  <%= link_to resource_path, class: "card__link" do %>
+    <h3 class="item-list__title">
+      <%= cell("decidim/budgets/project_selected_status", model) %>
+      <%= resource_title %>
+    </h3>
+  <% end %>
 
-        <%= resource_title %>
-      </h3>
-    <% end %>
+  <div class="item-list__metadata">
+    <%= cell "decidim/budgets/project_tags", model, context: { extra_classes: ["tags--project"] } %>
+  </div>
 
-    <div class="item-list__metadata">
-      <%= cell "decidim/budgets/project_tags", model, context: { extra_classes: ["tags--project"] } %>
-    </div>
+  <div class="budget-list__data__number budget-list__number hide-for-medium">
+    <%= cell("decidim/budgets/project_votes_count",
+    model,
+    layout: :one_line) %>
 
-    <div class="budget-list__data__number budget-list__number hide-for-medium">
-      <%= cell("decidim/budgets/project_votes_count",
-      model,
-      layout: :one_line) %>
-
-      <%= cell("decidim/budgets/project_voted_hint", model, class: "margin-left-1") if current_order_checked_out? && resource_added? %>
-    </div>
+    <%= cell("decidim/budgets/project_voted_hint", model, class: "margin-left-1") if current_order_checked_out? && resource_added? %>
   </div>
 </div>
