--- a/decidim-conferences/app/views/decidim/conferences/conference_speakers/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conference_speakers/index.html.erb
@@ -13,7 +13,10 @@ edit_link(
 <main class="container">
 
   <section id="conference_speakers-grid">
-    <h1 class="h1 decorator my-12"><%= t("decidim.conferences.conference_speakers.index.speakers", count: "") %></h1>
+    <h1 class="h3 md:h1 decorator my-12">
+      <span class="not-sr-only"><%= t("decidim.conferences.conference_speakers.index.speakers", count: "") %></span>
+      <span class="sr-only"><%= t("decidim.conferences.conference_speakers.index.speakers", count: "") %> (<%= translated_attribute current_participatory_space.title %>)</span>
+    </h1>
     <div class="conference__speaker__container">
       <%= render(collection) %>
     </div>
