--- a/decidim-conferences/app/views/decidim/conferences/media/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/media/index.html.erb
@@ -10,7 +10,7 @@ edit_link(
 %>
 
 <%# NOTE: this page does not use a regular layout %>
-<div class="container">
+<main class="container">
   <h1 class="h3 md:h1 decorator my-12">
     <span class="not-sr-only"><%= t("media", scope: "layouts.decidim.conferences_nav") %></span>
     <span class="sr-only"><%= t("media", scope: "layouts.decidim.conferences_nav") %> (<%= translated_attribute current_participatory_space.title %>)</span>
@@ -39,4 +39,4 @@ edit_link(
       <%= render partial: "decidim/application/documents", locals: { documents: current_participatory_space.documents } %>
     </section>
   <% end %>
-</div>
+  </main>
