--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_content_blocks.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_content_blocks.scss
@@ -14,7 +14,7 @@
     }
 
     > :nth-child(3n){
-      @apply col-span-9 md:col-span-3 row-span-2 md:order-2 justify-self-center flex md:flex-col gap-2 max-w-full overflow-x-auto;
+      @apply col-span-9 md:col-span-3 row-span-2 md:order-2 justify-self-center flex flex-col gap-2 max-w-full overflow-x-auto;
     }
 
     > :nth-child(3n + 2){
