--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_login.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_login.scss
@@ -76,7 +76,7 @@
     }
 
     &-form{
-      @apply w-full md:w-3/4 mx-auto [&>*]:justify-center;
+      @apply w-full md:w-3/4 mx-auto [&>*]:justify-center md:[&>*]:justify-between;
     }
   }
 }
