Define year param and use it in year_calendar partial

--- a/decidim-meetings/app/views/decidim/meetings/directory/meetings/year_calendar.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/directory/meetings/year_calendar.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "decidim/meetings/shared/year_calendar", locals: {
+  year: @year,
   search_variable: :title_or_description_cont,
   display_filter_date: !@forced_past_meetings,
   display_filter_type: true,
