--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -25,7 +25,7 @@
     }
 
     > :last-child{
-      @apply col-span-2 md:col-span-1 md:col-start-2
+      @apply col-span-2 md:col-span-1 md:col-start-2;
     }
   }
 
