--- a/decidim-meetings/app/cells/decidim/meetings/highlighted_meetings_for_component/show.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/highlighted_meetings_for_component/show.erb
@@ -30,8 +30,7 @@
     <div class="meeting-list__container">
       <span class="meeting-list__block-list-title"><%= t("decidim.participatory_spaces.highlighted_meetings.upcoming_meetings") %></span>
       <% upcoming_meetings.includes(:component).each do |meeting| %>
-        <%# REDESIGN_PENDING: This should be the meetings_m card %>
-        <%= card_for meeting, size: :list_item %>
+        <%= cell "decidim/meetings/meeting_l", meeting, link_whole_card: true, title_tag: :h2 %>
       <% end %>
     </div>
   </div>
