--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -6,11 +6,10 @@
       <% end %>
       <div class="budget-summary__progressbar">
         <div class="progress budget-progress" role="progressbar" aria-valuenow="<%= current_order_budget_percent %>" aria-valuetext="<%= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-meter progress-meter--minimum" style="width: <%= current_order_budget_percent_minimum %>%">
+          <div class="progress-meter budget-summary__progressbar--minimum" style="width: <%= current_order_budget_percent_minimum %>%">
             <span class="progress-meter--minimum-mark"></span>
           </div>
-          <div class="progress-meter budget-progress__meter" style="width: <%= current_order_budget_percent %>%">
-            <span class="progress-meter-text progress-meter-text--right"><%= current_order_budget_percent %>%</span>
+          <div class="progress-meter budget-summary__progressbar--meter" style="width: <%= current_order_budget_percent %>%">
           </div>
         </div>
 
