limit the scope of th einitializer js function

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_identities.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_identities.scss
@@ -7,11 +7,11 @@
 
       &.is-selected,
       &:hover{
-        @apply border-primary/10;
+        @apply border-primary/10 [&_svg]:visible;
       }
 
       svg{
-        @apply w-6 h-6 text-success fill-current;
+        @apply w-6 h-6 text-success fill-current invisible;
       }
     }
   }
