--- a/decidim-core/app/views/decidim/endorsements/_identity.html.erb
+++ b/decidim-core/app/views/decidim/endorsements/_identity.html.erb
@@ -1,5 +1,4 @@
-<%# REDESIGN_PENDING: try to use Turbo instead JS for the Ajax calls %>
-<li class="<%= selected ? "is-selected" : "" %>" data-user-identity data-method="<%= http_method.to_s.upcase %>" data-create_url="<%= create_url %>" data-destroy_url="<%= destroy_url %>">
+<li data-user-identity data-method="<%= http_method.to_s.upcase %>" data-create_url="<%= create_url %>" data-destroy_url="<%= destroy_url %>">
   <%== cell("decidim/author", identity, skip_profile_link: true).profile %>
-  <%= icon("checkbox-circle-line") if selected %>
+  <%= icon("checkbox-circle-line") %>
 </li>
