--- a/decidim-admin/app/views/decidim/admin/user_groups_csv_verifications/new.html.erb
+++ b/decidim-admin/app/views/decidim/admin/user_groups_csv_verifications/new.html.erb
@@ -12,7 +12,7 @@
         <code class="code-block"><%= t(".explanation_example") %></code>
       </div>
       <div class="row column">
-        <%= form.upload :file, optional: false, redesigned: redesign_enabled? %>
+        <%= form.upload :file, optional: false %>
       </div>
 
       <div class="button--double form-general-submit">
