--- a/decidim-assemblies/app/views/decidim/assemblies/admin/assembly_members/_form.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/admin/assembly_members/_form.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="row column user-fields--non-user-avatar">
-        <%= form.upload :non_user_avatar, help_i18n_messages: ["non_user_avatar_help", "image_guide"], help_i18n_scope: "decidim.assemblies.admin.assembly_members.form", redesigned: redesign_enabled? %>
+        <%= form.upload :non_user_avatar, help_i18n_messages: ["non_user_avatar_help", "image_guide"], help_i18n_scope: "decidim.assemblies.admin.assembly_members.form" %>
       </div>
 
       <div class="row column user-fields--user-picker">
