--- a/decidim-conferences/app/views/decidim/conferences/admin/conference_speakers/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/conference_speakers/_form.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div class="row column">
-      <%= form.upload :avatar, redesigned: redesign_enabled? %>
+      <%= form.upload :avatar %>
     </div>
   </div>
 </div>
