--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_process_groups/_form.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_process_groups/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row column">
-      <%= form.upload :hero_image, redesigned: redesign_enabled? %>
+      <%= form.upload :hero_image %>
     </div>
   </div>
 
