--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
@@ -66,11 +66,11 @@
   <div class="card-section">
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :hero_image, redesigned: redesign_enabled? %>
+        <%= form.upload :hero_image %>
       </div>
 
       <div class="columns xlarge-6">
-        <%= form.upload :banner_image, redesigned: redesign_enabled? %>
+        <%= form.upload :banner_image %>
       </div>
     </div>
   </div>
