--- a/decidim-system/app/views/decidim/system/oauth_applications/_form.html.erb
+++ b/decidim-system/app/views/decidim/system/oauth_applications/_form.html.erb
@@ -22,5 +22,5 @@
 </div>
 
 <div class="row column">
-  <%= form.upload :organization_logo, optional: false, redesigned: redesign_enabled? %>
+  <%= form.upload :organization_logo, optional: false %>
 </div>
