--- a/decidim-admin/app/views/decidim/admin/attachments/_form.html.erb
+++ b/decidim-admin/app/views/decidim/admin/attachments/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="row column">
-      <%= form.upload :file, optional: false, redesigned: redesign_enabled? %>
+      <%= form.upload :file, optional: false %>
     </div>
   </div>
 </div>
