--- a/decidim-admin/app/views/decidim/admin/imports/new.html.erb
+++ b/decidim-admin/app/views/decidim/admin/imports/new.html.erb
@@ -38,7 +38,7 @@
               </div>
             </legend>
             <div class="row column">
-              <%= form.upload :file, optional: false, help_i18n_scope: "decidim.admin.forms.file_help.import", redesigned: redesign_enabled? %>
+              <%= form.upload :file, optional: false, help_i18n_scope: "decidim.admin.forms.file_help.import" %>
             </div>
           </fieldset>
         </div>
