--- a/decidim-admin/app/views/decidim/admin/organization_appearance/_form.html.erb
+++ b/decidim-admin/app/views/decidim/admin/organization_appearance/_form.html.erb
@@ -52,7 +52,7 @@
 
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :highlighted_content_banner_image, redesigned: redesign_enabled? %>
+        <%= form.upload :highlighted_content_banner_image %>
       </div>
     </div>
   </div>
