--- a/decidim-admin/app/views/decidim/admin/participatory_space_private_users_csv_imports/new.html.erb
+++ b/decidim-admin/app/views/decidim/admin/participatory_space_private_users_csv_imports/new.html.erb
@@ -31,7 +31,7 @@
         <code class="code-block"><%= t(".explanation_example", csv_col_sep: Decidim.default_csv_col_sep) %></code>
       </div>
       <div class="row column">
-        <%= form.upload :file, optional: false, redesigned: redesign_enabled? %>
+        <%= form.upload :file, optional: false %>
       </div>
 
       <div class="button--double form-general-submit">
