--- a/decidim-assemblies/app/views/decidim/assemblies/admin/assembly_imports/_form.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/admin/assembly_imports/_form.html.erb
@@ -18,7 +18,7 @@
           <fieldset>
             <legend><%= t(".document_legend") %> </legend>
               <div class="row column">
-                <%= form.upload :document, optional: false, redesigned: redesign_enabled? %>
+                <%= form.upload :document, optional: false %>
               </div>
           </fieldset>
         </div>
