--- a/decidim-conferences/app/views/decidim/conferences/admin/conferences/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/conferences/_form.html.erb
@@ -45,11 +45,11 @@
 
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :hero_image, redesigned: redesign_enabled? %>
+        <%= form.upload :hero_image %>
       </div>
 
       <div class="columns xlarge-6">
-        <%= form.upload :banner_image, redesigned: redesign_enabled? %>
+        <%= form.upload :banner_image %>
       </div>
     </div>
 
