--- a/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
@@ -11,13 +11,13 @@
   <div class="card-section">
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :main_logo, optional: false, redesigned: redesign_enabled? %>
+        <%= form.upload :main_logo, optional: false %>
       </div>
     </div>
 
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :signature, optional: false, redesigned: redesign_enabled? %>
+        <%= form.upload :signature, optional: false %>
       </div>
     </div>
     <div class="row column">
