--- a/decidim-conferences/app/views/decidim/conferences/admin/partners/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/partners/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="row column">
-      <%= form.upload :logo, optional: false, redesigned: redesign_enabled? %>
+      <%= form.upload :logo, optional: false %>
     </div>
   </div>
 </div>
