--- a/decidim-consultations/app/views/decidim/consultations/admin/consultations/_form.html.erb
+++ b/decidim-consultations/app/views/decidim/consultations/admin/consultations/_form.html.erb
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="columns xlarge-4">
-        <%= form.upload :banner_image, redesigned: redesign_enabled? %>
+        <%= form.upload :banner_image %>
       </div>
 
       <div class="columns xlarge-4">
@@ -51,7 +51,7 @@
       </div>
 
       <div class="columns xlarge-4">
-        <%= form.upload :introductory_image, redesigned: redesign_enabled? %>
+        <%= form.upload :introductory_image %>
       </div>
     </div>
   </div>
