--- a/decidim-consultations/app/views/decidim/consultations/admin/questions/_form.html.erb
+++ b/decidim-consultations/app/views/decidim/consultations/admin/questions/_form.html.erb
@@ -73,11 +73,11 @@
       </div>
 
       <div class="columns xlarge-4">
-        <%= form.upload :hero_image, redesigned: redesign_enabled? %>
+        <%= form.upload :hero_image %>
       </div>
 
       <div class="columns xlarge-4">
-        <%= form.upload :banner_image, redesigned: redesign_enabled? %>
+        <%= form.upload :banner_image %>
       </div>
     </div>
   </div>
