--- a/decidim-core/app/views/decidim/groups/_form.html.erb
+++ b/decidim-core/app/views/decidim/groups/_form.html.erb
@@ -11,7 +11,7 @@
     <%= f.text_field :email, help_text: t(".email_help") %>
   </div>
   <div class="field">
-    <%= f.upload :avatar, redesigned: redesign_enabled? %>
+    <%= f.upload :avatar %>
   </div>
   <div class="field">
     <%= f.text_area :about, rows: 5 %>
