--- a/decidim-elections/app/views/decidim/votings/admin/votings/_form.html.erb
+++ b/decidim-elections/app/views/decidim/votings/admin/votings/_form.html.erb
@@ -68,11 +68,11 @@
 
     <div class="row">
       <div class="columns xlarge-4">
-        <%= form.upload :banner_image, label: t(".banner_image"), redesigned: redesign_enabled? %>
+        <%= form.upload :banner_image, label: t(".banner_image") %>
       </div>
 
       <div class="columns xlarge-4">
-        <%= form.upload :introductory_image, label: t(".introductory_image"), redesigned: redesign_enabled? %>
+        <%= form.upload :introductory_image, label: t(".introductory_image") %>
       </div>
     </div>
   </div>
