--- a/decidim-proposals/app/views/decidim/proposals/admin/participatory_texts/new_import.html.erb
+++ b/decidim-proposals/app/views/decidim/proposals/admin/participatory_texts/new_import.html.erb
@@ -23,7 +23,7 @@
           <fieldset>
             <legend> <%= t(".document_legend", valid_mime_types: mime_types_with_document_examples).html_safe %> </legend>
               <div class="row column">
-                <%= form.upload :document, optional: false, redesigned: redesign_enabled? %>
+                <%= form.upload :document, optional: false %>
               </div>
           </fieldset>
         </div>
