--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_update.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_update.scss
@@ -1,20 +1,20 @@
 .upload-modal{
   &__dropzone{
-    @apply bg-background px-5 py-6 rounded max-h-[50vh] overflow-y-auto;
+    @apply bg-background px-5 py-6 rounded max-h-[50vh] overflow-y-auto border-2 border-transparent;
 
     &[hidden] + &:last-child{
       @apply py-14;
     }
 
     &-container{
-      @apply mt-12 space-y-4;
+      @apply mt-4 md:mt-12 space-y-4;
     }
 
     &-placeholder{
       @apply w-full flex flex-col md:flex-row items-center justify-between gap-4 font-semibold text-gray-2 text-md [&>span]:inline-flex [&>span]:items-center [&>span]:gap-2;
     }
 
-    &.is-dragover:last-child{
+    &.is-dragover:not(.is-disabled):last-child{
       @apply border-2 border-secondary border-dashed bg-background-4;
     }
 
@@ -22,7 +22,7 @@
       @apply w-full flex flex-col gap-4;
 
       [data-template]{
-        @apply grow flex items-center justify-start gap-6;
+        @apply grow flex flex-col md:flex-row items-center justify-start gap-6;
 
         > *:first-child{
           @apply w-24 flex-none flex justify-center;
@@ -60,7 +60,7 @@
       }
 
       button{
-        @apply ml-auto button button__sm button__transparent-primary;
+        @apply w-full md:w-auto md:ml-auto button button__sm button__transparent-primary;
       }
 
       progress{
@@ -100,7 +100,7 @@
   }
 
   &__text{
-    @apply text-sm text-gray-2 mt-4 mb-20;
+    @apply text-sm text-gray-2 mt-4 mb-8 md:mb-20;
 
     ul,
     ol{
